--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ newsourceroot: https://github.com/Honwhy/honwhy.github.io/new/master
 #duoshuo_shortname: lixizhi
 #duoshuo_url: "http://lixizhi.github.io"
 # disqus.com commenting system. please note that it is exclusive with duoshuo.com
-disqus_shortname: HonwhyWang
+disqus_shortname: honwhy
 disqus_url: "http://honwhy.wang"
 #########################################
 
