--- a/_config.yml
+++ b/_config.yml
@@ -1,61 +1,41 @@
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Honwhy's Blog
-brief-intro: 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://honwhy.wang" # the base hostname & protocol for your site
-
-permalink: /:year/:month/:day/:title/
-
-# other links
-twitter_username: 
-facebook_username: 
-github_username:  Honwhy
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Honwhy Wang's Blog
 email: honwhy.wang@gmail.com
-weibo_username: 
-zhihu_username: 
-linkedIn_username: 
-dribbble_username:
-
-description_footer: 与神兽党一起成长！
-
-# comments
-# two ways to comment, only choose one, and use your own short name
-# 两种评论插件，选一个就好了，使用自己的 short_name
-duoshuo_shortname: #hygblog
-disqus_shortname: honwhy
-
-# statistic analysis 统计代码
-# 百度统计 id，将统计代码替换为自己的百度统计id，即
-# hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
-# xxxxx字符串
-baidu_tongji_id: 
-google_analytics_id:  # google 分析追踪id
+description: >- # this means to ignore newlines until "baseurl:"
+  Be good to each other.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://honwhy.wang" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: 
+github_username: Honwhy 
 
 # Build settings
 markdown: kramdown
-
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-
-# port
-# port: 1234
-
-# url
-category_dir: category/
-tag_dir: tag/
-
-# excerpt
-excerpt_separator: "\n\n\n\n"
-
-# paginate
+theme: minima
 plugins:
-  - jekyll-paginate
-paginate: 6
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
