--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Honwhy Wang's Blog
-email: honwhy.wang@hotmail.com
+email: honwhy.wang#hotmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Be good to each other.
 baseurl: "" # the subpath of your site, e.g. /blog
