--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,26 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Honwhy Wang's Blog
-email: honwhy.wang#hotmail.com
+title: Honwhy Blog
+email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Be good to each other.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://honwhy.wang" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username: Honwhy 
+  Where to find options, that is a question.
+twitter_username: honwhy19
+github_username: honwhy
+minimal_mistakes_skin: default
+search: true
 
 # Build settings
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
+remote_theme: mmistakes/minimal-mistakes
+# Outputting
+permalink: /:categories/:title/
+paginate: 5 # amount of posts to show
+paginate_path: /page/:num/
+timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
+include:
+  - _pages
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -39,3 +45,57 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# Plugins (previously gems:)
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
+author:
+  name   : "Honwhy Wang"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "Where to find options, that is a question."
+  links:
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://honwhy.wang"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/honwhy"
+
+footer:
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/honwhy"
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+category_archive:
+  type: liquid
+  path: /categories/
+tag_archive:
+  type: liquid
+  path: /tags/
